fix overflow overlay - mozilla bug

--- a/src/_partials/_overflow.scss
+++ b/src/_partials/_overflow.scss
@@ -11,6 +11,9 @@ $coordinate: null, 'x', 'y';
       }
       @each $value in $overflow {
         .#{$query}overflow#{$prop}-#{$value} {
+          @if ($value == 'overlay') {
+            overflow#{$prop}: auto;
+          }
           overflow#{$prop}: #{$value};
         }
       }
